--- a/docker-images/apache-php-image/content/index.html
+++ b/docker-images/apache-php-image/content/index.html
@@ -101,6 +101,9 @@
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
 
+  <!-- Custom script to load animals -->
+  <script src="js/animals.js"></script>
+
 </body>
 
 </html>
